--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,10 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+apply from: "../../node_modules/react-native-ultimate-config/android/rnuc.gradle"
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -265,6 +269,9 @@ dependencies {
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    //react-native-events is a dependency of react-native-spotify-remote
+    implementation project(':react-native-events') 
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
