--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,13 @@
 rootProject.name = 'spotifyforbike'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+
 include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
+
+//react-native-events is a dependency of react-native-spotify-remote
+include ':react-native-events'
+project(':react-native-events').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-events/android')
+
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
