--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+<!-- https://community.spotify.com/t5/Spotify-for-Developers/Why-can-t-I-use-the-SDK-on-Android-OS-11/m-p/5062921/highlight/true#M1438 -->
+    <queries>
+      <package android:name="com.spotify.music" />
+    </queries>
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
