--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,23 +1,12 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '11.0'
-install! 'cocoapods', :deterministic_uuids => false
+platform :ios, '10.0'
 
 target 'spotifyforbike' do
   config = use_native_modules!
 
-  # Flags change depending on the env values.
-  flags = get_default_flags()
-
-  use_react_native!(
-    :path => config[:reactNativePath],
-    # to enable hermes on iOS, change `false` to `true` and then install pods
-    :hermes_enabled => flags[:hermes_enabled],
-    :fabric_enabled => flags[:fabric_enabled],
-    # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/.."
-  )
+  use_react_native!(:path => config["reactNativePath"])
 
   target 'spotifyforbikeTests' do
     inherit! :complete
@@ -27,11 +16,18 @@ target 'spotifyforbike' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable the next line.
-  use_flipper!()
-
+  # you should disable these next few lines.
+  use_flipper!
   post_install do |installer|
-    react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    flipper_post_install(installer)
+  end
+end
+
+target 'spotifyforbike-tvOS' do
+  # Pods for spotifyforbike-tvOS
+
+  target 'spotifyforbike-tvOSTests' do
+    inherit! :search_paths
+    # Pods for testing
   end
 end
