--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "16.13.1",
+    "react-native": "0.63.4",
     "react-native-idle-timer": "^2.1.7",
-    "react-native-safe-area-context": "^4.2.5",
+    "react-native-safe-area-context": "3.4.0",
     "react-native-screens": "^3.13.1",
     "react-native-snackbar": "^2.4.0",
     "react-native-spotify-remote": "0.3.11-5",
@@ -28,26 +28,26 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.8.4",
     "@babel/plugin-transform-flow-strip-types": "^7.17.12",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.67.3",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "@types/jest": "^25.2.3",
+    "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.10",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^16.9.2",
     "@types/spotify-web-api-node": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4"
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.8.3"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^16"
   },
   "jest": {
     "preset": "react-native",
