--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'spotifyforbike' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RCTSystemSetting', :path => '../node_modules/react-native-system-setting'
+
   target 'spotifyforbikeTests' do
     inherit! :complete
     # Pods for testing
