--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "makeDebugApk": "cd android && ./gradlew :app:assembleRelease && cd .."
   },
   "dependencies": {
-    "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
+    "add": "^2.0.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-device-info": "^10.0.2",
@@ -24,10 +26,12 @@
     "react-native-screens": "^3.13.1",
     "react-native-snackbar": "^2.4.0",
     "react-native-spotify-remote": "0.3.11-5",
+    "react-native-system-setting": "^1.7.6",
     "react-native-ultimate-config": "^4.0.0",
     "react-native-vector-icons": "^9.1.0",
     "spotify-web-api-node": "^5.0.2",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
